--- a/nginx.conf
+++ b/nginx.conf
@@ -27,12 +27,13 @@ server {
 
     location /static {
         #alias /home/docker/volatile/static; # your Django project's static files - amend as required
-        alias /mnt/nas/blog_project/DjangoBlog/weblog/static;   # your Django project's static files - amend as required
+        alias /mnt/nas/blog_project/DjangoBlog/weblog/apps/blog/static;   # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /mnt/nas/blog_project/DjangoBlog/uwsgi_params; # the uwsgi_params file you installed
+        #include     /mnt/nas/blog_project/DjangoBlog/uwsgi_params; # the uwsgi_params file you installed
+        include     /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
         }
     }
