--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
 # chdir to the folder of this config file, plus app/website
-chdir = %dweblog/
+chdir = %d
 # load the module from wsgi.py, it is a python path from 
 # the directory above.
-module=config.wsgi
+module=weblog.config.wsgi
 #module=config.wsgi:application
 # allow anyone to connect to the socket. This is very permissive
 chmod-socket=666
